# connectpy

./: LICENSE  README.md  pyproject.toml
connectpy/: client.py
example/: example_client.py  example_server.py
example/buf/: buf.gen.yaml  buf.yaml
example/buf/svc/v1/: testservice.proto
example/go/: go.mod  go.sum
example/go/cmd/client/: client.go
example/go/cmd/server/: server.go
example/go/proto/svc/v1/: testservice.pb.go
example/go/proto/svc/v1/svcv1connect/: testservice.connect.go
example/proto/svc/v1/: __init__.py
src/connectpy/: __init__.py  server.py
